<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="NCU" Id="{0cf25c1a-c106-49d2-9023-42d1e82fa972}">
    <Declaration><![CDATA[TYPE NCU :
STRUCT
	// Data for Trackers aggregator
	

		MesAlarmCom			: BOOL ;
		
		MesAlarmCode		: WORD ;
		MesWarningCode 		: WORD ; 
		MesEventCode		: WORD ; 
		
		MesCP_Read			: BOOL := TRUE;
		MesCP_Write			: BOOL  ;
	
		
		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>