<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="NCU_Axial" Id="{27726baa-fa20-4d7c-878b-bd898273672a}">
    <Declaration><![CDATA[TYPE NCU_Axial :
STRUCT
	// Data for Trackers aggregator
	
		MesData				: NCU ;
	
		AX_TRK			: ARRAY[1..CstNbTrk_NCU_G] OF TRK_Axial;
		
		MesRSUGlobal		: WORD ; 
	//	MesAnemoAlarm		: WORD ; 
		MesComNCUAlarm		: WORD ; 
		MesSnow				: REAL ; 
		MesWindSpeed		: REAL ; 
		MesWindDir			: REAL ; 
		
		MesForceWindCmd		: WORD ; 
		MesForceCleaningCmd	: WORD ; 
		MesForceSnowCmd		: WORD ; 
		

		MesWindAlarm		: BOOL ; 
		
		CalCPEmergency		: BOOL;
		CalCPWindPos		: BOOL;
		CalCPSnowPos		: BOOL;
		CalCPCleaningPos	: BOOL;
		
		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>