<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TRK" Id="{7b705138-854c-4d9c-a40e-d315ecb81fa6}">
    <Declaration><![CDATA[TYPE TRK :
STRUCT
	// Structure for all tables with trackers
	
		MesAngle			: REAL ; 	// rad . -Pi , Pi . Tracker angle . 
		MesAngleTarget		: REAL ; 	// rad . -Pi .. pi . Tracker angle target 
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>