<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TRK_Axial" Id="{ce039805-22f3-4432-9794-200939ff228f}">
    <Declaration><![CDATA[TYPE TRK_Axial :
STRUCT
	// Structure for all tables with trackers
		MesData				: TRK ; 
		MesImaxmotor		: REAL;		// A . Motor Maximal Current 
		MesImotor			: REAL;		// A . Motor Current
		MesStatusSynthesis	: WORD ; 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>